upgrade refactor code