@@ -4,12 +4,13 @@ import it.progetto.energy.impl.configuration.UserDetailsImpl;
 import it.progetto.energy.impl.dto.JwtResponse;
 import it.progetto.energy.impl.model.LoginRequest;
 import it.progetto.energy.impl.utils.JwtUtils;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -19,21 +20,19 @@ import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @CrossOrigin(origins="*")
 @Slf4j
 @RequestMapping("/api/auth")
+@RequiredArgsConstructor
 public class AuthController {
-	@Autowired
-	AuthenticationManager authManager;
-	@Autowired
-    JwtUtils jwtUtils;
+
+	private final AuthenticationManager authManager;
+    private final JwtUtils jwtUtils;
 	
 	@PostMapping("/login")
-	public ResponseEntity<?> login(@Valid @RequestBody LoginRequest request) {
-		
+	public JwtResponse login(@Valid @RequestBody LoginRequest request) {
 		UsernamePasswordAuthenticationToken usrNameAuth = new UsernamePasswordAuthenticationToken( 
 				request.getUserName(), 
 				request.getPassword()
@@ -44,22 +43,20 @@ public class AuthController {
 		UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
 		List<String> roles = userDetails.getAuthorities()
 								.stream()
-								.map(item -> item.getAuthority())
-								.collect(Collectors.toList());
-		
-		JwtResponse jwtresp = new JwtResponse(
-				jwt, 
-				userDetails.getId(), 
+								.map(GrantedAuthority::getAuthority)
+								.toList();
+
+		return new JwtResponse(
+				jwt,
+				userDetails.getId(),
 				userDetails.getUsername(),
 				roles
 			);
 		
-		return ResponseEntity.ok(jwtresp);
-		
 	}
 	
 	@PostMapping("/login/jwt")
-	public ResponseEntity<?> loginJwt(@Valid @RequestBody LoginRequest request) {
+	public ResponseEntity<String> loginJwt(@Valid @RequestBody LoginRequest request) {
 		log.info("login - jwt "+request);
 		UsernamePasswordAuthenticationToken usrNameAuth = new UsernamePasswordAuthenticationToken( 
 				request.getUserName(), 
@@ -67,8 +64,8 @@ public class AuthController {
 		);
 		Authentication authentication = authManager.authenticate(usrNameAuth);
 		SecurityContextHolder.getContext().setAuthentication(authentication);
-		String jwt = jwtUtils.generateJwtToken(authentication);
-		return ResponseEntity.ok(jwt);
+		String jwtToken = jwtUtils.generateJwtToken(authentication);
+		return ResponseEntity.ok(jwtToken);
 	}
 	
 }
